Use of the "bracket" syntax for node attributes setting/ accessing. The older "method" syntax (which was previously used within this cookbook) is deprecated and will be removed in Chef 13. See: https://docs.chef.io/deprecations_attributes.html.

--- a/templates/default/ldap.conf.erb
+++ b/templates/default/ldap.conf.erb
@@ -14,9 +14,9 @@
 
 # TLS certificates (needed for GnuTLS)
 BASE  <%=node['ca_openldap']['basedn']%>
-<%if node.ca_openldap.tls.enable == :exclusive%>
+<%if node['ca_openldap']['tls']['enable'] == :exclusive%>
 URI   ldaps://<%=node['ca_openldap']['ldap_server']%>:<%=node['ca_openldap']['ldap_port']%>
 <%else%>
 URI   ldap://<%=node['ca_openldap']['ldap_server']%>:<%=node['ca_openldap']['ldap_port']%>
 <%end%>
-TLS_CACERTDIR     <%=node.ca_openldap.tls.cacert_path%>
+TLS_CACERTDIR     <%=node['ca_openldap']['tls']['cacert_path']%>
